fix content clipping inside novaposhta delivery option

--- a/src/components/modules/checkout/NovaposhtaOptionFields/styles.module.scss
+++ b/src/components/modules/checkout/NovaposhtaOptionFields/styles.module.scss
@@ -13,7 +13,7 @@
 
 .noWarehousesText {
   max-width: 750px;
-  margin-bottom: 40px;
+  //margin-bottom: 40px;
 }
 
 .warehouseSearchSelect {
